src/app/_components/PortalComponents/Pagination/index.module.scss
.pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  color: #6c6a7a;
  height: 5rem;
  border-radius: 30px;
  font-size: 16px;
  width: 100%;
  user-select: none;

  > div:first-child {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    border: 1px solid #6c6a7a;
    color: black;
    height: 36px;
    padding: 0 0.75rem 0 0.75rem;
    gap: 1rem;
  }
}

.arrowsContainer {
  display: flex;
  flex-direction: row;
  > span {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 0.5rem;
    border: 1px solid #6c6a7a;
    border-right: none;
    border-left: none;
    height: 36px;
    font-weight: 350;
  }

  > div {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: var(--color-primary);
    color: var(--color-white);
    border-left: 1px solid #6c6a7a;
    border-top: 1px solid #6c6a7a;
    border-bottom: 1px solid #6c6a7a;
    font-size: 1rem;
    font-weight: bold;
    transition: background-color 0.3s ease;

    height: 36px;
    width: 36px;

    &:first-child {
      border: 1px solid #6c6a7a;
      border-right: none;
      border-radius: 5px 0 0 5px;
    }

    &:last-child {
      border: 1px solid #6c6a7a;
      border-radius: 0 3px 3px 0;
    }

    &:hover {
      background-color: #d9dbe4;
    }
  }
}

.chevron {
  cursor: pointer;
}

.disabled {
  cursor: not-allowed;
}

.paginationContainer {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 2rem;
}

.itemCount {
  position: absolute;
  right: 2rem;
  color: #6c6a7a;
  text-wrap: nowrap;
}

@media screen and (max-width: 768px) {
  .itemCount {
    position: static;
  }
  .paginationContainer {
    padding: 0.5rem;
  }
}

.pageDropdownMenu {
  user-select: none;
  background-color: white;
  border: 1px solid #6c6a7a;
  border-top: none;
  box-shadow:
    0 4px 6px -1px rgb(0 0 0 / 0.1),
    0 2px 4px -2px rgb(0 0 0 / 0.1);
  z-index: 999;
  height: fit-content;
  overflow-y: scroll;

  .pageOption {
    cursor: pointer;
    padding: 0.25rem 0.75rem;
    &:hover {
      background-color: #f0f0f0;
    }
  }

  .activePage {
    background-color: #d9dbe4;
  }
}

